--- a/index.html
+++ b/index.html
@@ -14,24 +14,115 @@
 
         <link href="css/main.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css" rel="stylesheet">
+        <link href="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCoreRDark.min.css" rel="stylesheet">
     </head>
-    <body>
+    <body data-spy="scroll" data-target="topnavbar">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
+        <div id="topnavbar">
+            <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">Xodus</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#download">Get Started</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#learn">Learn</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
         <div class="container">
             <div class="jumbotron">
                 <h1>Xodus</h1>
-                <p>is comming...</p>
+                <h3>Java Embedded Transactional Key-Value Storage</h3>
+                <p><a href="#download" class="btn btn-primary btn-lg" role="button">Get Started</a></p>
+            </div>
+
+            <div class="jumbotron code-sample">
+                <pre class="brush: java; gutter: false">
+Environment env = Environments.newInstance("mydatabase", EnvironmentConfig.DEFAULT);
+
+Store store = env.computeInTransaction(new TransactionalComputable&lt;Store&gt;() {
+    public Store compute(Transaction txn) {
+        return env.openStore("Users", StoreConfiguration.WITHOUT_DUPLICATES, txn);
+    }
+});
+
+env.executeInTransaction(new TransactionalExecutable() {
+    public void execute(Transaction txn) {
+        store.put(txn, StringBinding.stringToEntry("lvo"),
+                       StringBinding.stringToEntry("jetbrains"));
+    }
+});
+
+env.executeInTransaction(new TransactionalExecutable() {
+    public void execute(Transaction txn) {
+        System.out.println(StringBinding.entryToString(
+                    store.get(txn, StringBinding.stringToEntry("lvo"))));
+    }
+});
+
+env.close();
+            </pre>
+            </div>
+
+            <h2 id="download">Get Started</h2>
+            <p>
+                License.
+                Source - github.
+                Binary - teamcity.
+                How to get from maven.
+            </p>
+
+            <h2 id="features">Features</h2>
+            <ul>
+                <li>Pure Java</li>
+                <li>Transactional (fully <a href="http://en.wikipedia.org/wiki/ACID">ACID</a>-compliant)</li>
+                <li>Schemaless</li>
+                <li>Embedded</li>
+            </ul>
+            <p>
+                Xodus support <a href="http://en.wikipedia.org/wiki/Snapshot_isolation">Snapshot isolation</a> implementing <a href="http://en.wikipedia.org/wiki/Log-structured_file_system">Log-Structured</a> files storage and <a href="http://en.wikipedia.org/wiki/Multiversion_concurrency_control">MVCC</a> approach.
+            </p>
+
+            <h2 id="learn">Learn</h2>
+            <p>
+                Link to docs and samples
+            </p>
+
+            <div class="footer">
+                <p>&copy; JetBrains 2014</p>
             </div>
         </div>
 
+
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.min.js"></script>
+
         <script src="js/main.js"></script>
+
+        <script type="text/javascript">
+            SyntaxHighlighter.all()
+        </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
