xodus site in progress

--- a/index.html
+++ b/index.html
@@ -84,10 +84,16 @@ env.close();
 
             <h2 id="download">Get Started</h2>
             <p>
-                License.
-                Source - github.
-                Binary - teamcity.
-                How to get from maven.
+                Xodus is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>
+            </p>
+            <p>
+                Xodus source code is hosted in <a href="https://github.com/JetBrains/xodus">github repository</a>.
+            </p>
+            <p>
+                TODO: Maven repository. How to get into maven and gradle.
+            </p>
+            <p>
+
             </p>
 
             <h2 id="features">Features</h2>
