--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ final Environment env = Environments.newInstance("mydatabase");
 
 env.executeInTransaction(new TransactionalExecutable() {
     public void execute(Transaction txn) {
-        Store store = env.openStore("Users", StoreConfiguration.WITH_DUPLICATES, txn);
+        Store store = env.openStore("Users", StoreConfig.WITHOUT_DUPLICATES, txn);
         store.put(txn, stringToEntry("lvo"), stringToEntry("jetbrains"));
         System.out.println(entryToString(store.get(txn, stringToEntry("lvo"))));
     }
