--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="jumbotron code-sample">
-                <pre class="brush: java; gutter: false">
+                <pre class="brush: java; gutter: false; toolbar: false;">
 final Environment env = Environments.newInstance("mydatabase");
 
 env.executeInTransaction(new TransactionalExecutable() {
