--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 final Environment env = Environments.newInstance("mydatabase");
 
 final Store store = env.computeInTransaction(txn ->
-    env.openStore("Users", WITHOUT_DUPLICATES, txn))
+    env.openStore("Users", WITHOUT_DUPLICATES, txn));
     
 env.executeInTransaction((txn) -> 
-   { store.put(txn, stringToEntry("lvo"), stringToEntry("jetbrains")); })
+   { store.put(txn, stringToEntry("lvo"), stringToEntry("jetbrains")); });
 
 System.out.println(env.computeInTransaction(txn ->
     entryToString(store.get(txn, stringToEntry("lvo")))));
