add "from jetbrains"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="container">
             <div class="jumbotron">
-                <h1>Xodus</h1>
+                <h1>Xodus<span class="fromjetbrains">from <a href="http://www.jetbrains.com/">JetBrains</a></span></h1>
                 <h3>Java Embedded Transactional Key-Value Storage</h3>
                 <p><a href="#download" class="btn btn-primary btn-lg" role="button">Get Started</a></p>
             </div>
