--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ env.close();
                 <li>Embedded</li>
             </ul>
             <p>
-                Xodus supports <a href="http://en.wikipedia.org/wiki/Snapshot_isolation">Snapshot isolation</a> implementing <a href="http://en.wikipedia.org/wiki/Log-structured_file_system">Log-Structured</a> files storage and <a href="http://en.wikipedia.org/wiki/Multiversion_concurrency_control">MVCC</a> approach.
+                Xodus supports <a href="http://en.wikipedia.org/wiki/Snapshot_isolation">Snapshot isolation</a> by means of <a href="http://en.wikipedia.org/wiki/Log-structured_file_system">Log-Structured</a> files storage and <a href="http://en.wikipedia.org/wiki/Multiversion_concurrency_control">MVCC</a> approach.
             </p>
             <p>
-                Here is performance comparison of Xodus and Berkeley DB JE using <a href="http://fallabs.com/tokyocabinet/benchmark.pdf">Tokyo Cabinet Benchmark</a>with 1000000 keys. <a href="https://github.com/JetBrains/xodus/tree/master/benchmarks-jmh">Benchmark</a> is implemented using <a href="http://openjdk.java.net/projects/code-tools/jmh">OpenJDK JMH</a>.
+                Here is performance comparison of Xodus and Berkeley DB JE using <a href="http://fallabs.com/tokyocabinet/benchmark.pdf">Tokyo Cabinet Benchmark</a> with 1000000 keys. <a href="https://github.com/JetBrains/xodus/tree/master/benchmarks-jmh">Benchmark</a> is implemented using <a href="http://openjdk.java.net/projects/code-tools/jmh">OpenJDK JMH</a>.
             </p>
             <div id="performancechart" class="performancechart"></div>
 
