minor, more links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="container">
             <div class="jumbotron">
                 <h1>Xodus<span class="fromjetbrains">by <a href="http://www.jetbrains.com/">JetBrains</a></span></h1>
-                <h3>Java Embedded Transactional Key-Value Storage</h3>
+
+                <h3>Java Transactional Schemaless Embedded database</h3>
+
                 <p><a href="#download" class="btn btn-primary btn-lg" role="button">Get Started</a></p>
             </div>
 
@@ -82,7 +84,7 @@ env.close();
                 Xodus source code is hosted in <a href="https://github.com/JetBrains/xodus">github repository</a>.
             </p>
             <p>
-                TODO: Maven repository. How to get into maven and gradle.
+                Xodus artifacts are available via Maven Central.
             </p>
 
             <h2 id="features">Features</h2>
@@ -101,9 +103,19 @@ env.close();
             </p>
             <div id="performancechart" class="performancechart"></div>
 
-            <h2 id="learn">Learn</h2>
+            <h2 id="learn">Learn More</h2>
+
             <p>
-                Link to docs and samples.
+                <a href="https://github.com/JetBrains/xodus/wiki">Xodus wiki</a>
+            </p>
+
+            <p>
+                <a href="https://teamcity.jetbrains.com/viewType.html?buildTypeId=Xodus_Build">Check out the latest
+                    (nightly) builds</a>
+            </p>
+
+            <p>
+                <a href="http://xodus.myjetbrains.com/youtrack">File an issue or bug</a>
             </p>
 
             <div class="footer">
