--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ env.close();
             </pre>
             </div>
 
-            <h2 id="download">Get Started</h2>
+            <h2 id="download">Getting Started</h2>
             <p>
                 Xodus is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>
             </p>
@@ -84,7 +84,7 @@ env.close();
                 Xodus source code is hosted in <a href="https://github.com/JetBrains/xodus">github repository</a>.
             </p>
             <p>
-                Xodus artifacts are available via Maven Central.
+                Xodus artifacts are available in <a href="https://oss.sonatype.org/content/repositories/snapshots/org/jetbrains/xodus">Maven Central repository</a>.
             </p>
 
             <h2 id="features">Features</h2>
