--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ env.close();
             </p>
 
             <p>
-                <a href="http://xodus.myjetbrains.com/youtrack">File an issue or bug</a>
+                <a href="http://xodus.myjetbrains.com/youtrack">Report an issue</a>
             </p>
 
             <div class="footer">
