--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@ env.close();
                 <li>Xodus is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></li>
                 <li>Xodus source code is hosted in <a href="https://github.com/JetBrains/xodus">github</a> repository.</li>
                 <li>Xodus artifacts are available in <a
-                        href="https://oss.sonatype.org/content/repositories/snapshots/org/jetbrains/xodus">Maven
-                    Central</a>.
+                        href="http://search.maven.org/#search%7Cga%7C1%7Corg.jetbrains.xodus">Maven Central</a>.
                 </li>
             </ul>
 
