--- a/index.html
+++ b/index.html
@@ -96,19 +96,30 @@ env.close();
             <p>
                 Xodus uses <a href="http://en.wikipedia.org/wiki/Log-structured_file_system">Log-Structured</a> data storage. Reads are completely non-blocking due to <a href="http://en.wikipedia.org/wiki/Multiversion_concurrency_control">MVCC</a> and true <a href="http://en.wikipedia.org/wiki/Snapshot_isolation">Snapshot isolation</a>.
             </p>
+
+            <h2 id="benchmarks">Performance</h2>
             <p>
-                Here is performance comparison of Xodus, Berkeley DB JE, MapDB and Chronicle Map using<a
-                    href="http://fallabs.com/tokyocabinet/benchmark.pdf">Tokyo Cabinet Benchmark</a> with 1000000 keys.
-                <a href="https://github.com/JetBrains/xodus/tree/master/benchmarks-jmh">Benchmark</a> is implemented
-                using <a href="http://openjdk.java.net/projects/code-tools/jmh">OpenJDK JMH</a>.
+                Here is <a href="https://github.com/JetBrains/xodus/wiki/Benchmarks">performance comparison</a> of
+                Xodus,
+                <a href="http://www.oracle.com/us/products/database/berkeley-db/je/overview/index.html">Berkeley DB
+                    JE</a>,
+                <a href="https://github.com/jankotek/MapDB">MapDb</a>,
+                <a href="https://github.com/OpenHFT/Chronicle-Map">Chronicle Map</a> and
+                <a href="http://www.h2database.com/html/mvstore.html">H2 MVStore</a>
+                using <a href="http://fallabs.com/tokyocabinet/benchmark.pdf">Tokyo Cabinet Benchmark</a> with 1000000
+                keys.
             </p>
             <div id="performancechart" class="performancechart"></div>
 
             <h2 id="learn">Find out more</h2>
             <ul>
                 <li><a href="https://github.com/JetBrains/xodus/wiki">Xodus wiki</a></li>
-                <li><a href="https://teamcity.jetbrains.com/viewType.html?buildTypeId=Xodus_Build">Check out the latest (nightly) builds</a></li>
                 <li><a href="http://xodus.myjetbrains.com/youtrack">Report an issue</a></li>
+                <li><a href="https://teamcity.jetbrains.com/viewType.html?buildTypeId=Xodus_Build">Check out the latest
+                    builds</a></li>
+                <li><a href="https://upsource.jetbrains.com/Xodus/view">Observe development in Upsource</a></li>
+                <li><a href="https://github.com/lehvolk/xodus-entity-browser">EntityStore browser</a></li>
+                <li><a href="mailto:xodus-feedback@jetbrains.com">Ask questions by e-mail</a></li>
             </ul>
 
             <div class="footer">
