--- a/index.html
+++ b/index.html
@@ -1,66 +1,75 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JetBrains Xodus</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>JetBrains Xodus</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link href="css/main.css" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css" rel="stylesheet">
-        <link href="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCoreRDark.min.css" rel="stylesheet">
-    </head>
-    <body data-spy="scroll" data-target="topnavbar">
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <link href="css/main.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCoreRDark.min.css" rel="stylesheet">
+</head>
+<body data-spy="scroll" data-target="topnavbar">
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
 
-        <a href="https://github.com/JetBrains/xodus"><img style="position: fixed; top: 0; left: 0; border: 0; z-index: 3333" src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
+<a href="https://github.com/JetBrains/xodus"><img style="position: fixed; top: 0; left: 0; border: 0; z-index: 3333"
+                                                  src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67"
+                                                  alt="Fork me on GitHub"
+                                                  data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
 
-        <div id="topnavbar">
-            <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <!--<a class="navbar-brand" href="#">Xodus</a>-->
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#download">Get Started</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#learn">Learn</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Xodus<span class="fromjetbrains">by <a href="http://www.jetbrains.com/">JetBrains</a></span></h1>
-
-                <h3>Java Transactional Schema-less Embedded database</h3>
-
-                <p><a href="#download" class="btn btn-primary btn-lg" role="button">Get Started</a></p>
+<div id="topnavbar">
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!--<a class="navbar-brand" href="#">Xodus</a>-->
             </div>
 
-            <div class="jumbotron code-sample">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#start">Get Started</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#benchmarks">Performance</a></li>
+                    <li><a href="#learn">Learn</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<div class="container">
+    <div class="jumbotron">
+        <h1>Xodus<span class="fromjetbrains">by <a href="http://www.jetbrains.com/">JetBrains</a></span></h1>
+
+        <h3>Java Transactional Schema-less Embedded database</h3>
+
+        <p><a href="#start" class="btn btn-primary btn-lg" role="button">Get Started</a></p>
+    </div>
+
+    <div class="jumbotron code-sample">
                 <pre class="brush: java; gutter: false; toolbar: false;">
-final Environment env = Environments.newInstance("/home/me/.myAppData");
+final Environment env = Environments.newInstance("/home/me/.myData");
 
 final Store store = env.computeInTransaction(txn ->
     env.openStore("Messages", WITHOUT_DUPLICATES, txn));
@@ -74,78 +83,89 @@ out.println(env.computeInTransaction(txn ->
 
 env.close();
             </pre>
-            </div>
+    </div>
 
-            <h2 id="download">Getting Started</h2>
-            <ul>
-                <li>Xodus is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></li>
-                <li>Xodus source code is hosted in <a href="https://github.com/JetBrains/xodus">github</a> repository.</li>
-                <li>Xodus artifacts are available in <a
-                        href="http://search.maven.org/#search%7Cga%7C1%7Corg.jetbrains.xodus">Maven Central</a>.
-                </li>
-            </ul>
+    <h2 id="start">Getting Started</h2>
+    <ul>
+        <li>Xodus is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License,
+            Version 2.0</a></li>
+        <li>Xodus source code is hosted in <a href="https://github.com/JetBrains/xodus">github</a> repository.</li>
+        <li>Xodus artifacts are available in
+            <a href="http://search.maven.org/#search%7Cga%7C1%7Corg.jetbrains.xodus">Maven Central</a>.
+        </li>
+    </ul>
 
-            <h2 id="features">Features</h2>
-            <ul>
-                <li>Pure Java</li>
-                <li>Transactional (fully <a href="http://en.wikipedia.org/wiki/ACID">ACID</a>-compliant)</li>
-                <li>Highly Concurrent</li>
-                <li>Schema-less</li>
-                <li>Embedded</li>
-            </ul>
-            <p>
-                Xodus uses <a href="http://en.wikipedia.org/wiki/Log-structured_file_system">Log-Structured</a> data storage. Reads are completely non-blocking due to <a href="http://en.wikipedia.org/wiki/Multiversion_concurrency_control">MVCC</a> and true <a href="http://en.wikipedia.org/wiki/Snapshot_isolation">Snapshot isolation</a>.
-            </p>
+    <h2 id="features">Features</h2>
+    <ul>
+        <li>Pure Java and <a href="https://kotlinlang.org">Kotlin</a></li>
+        <li>Transactional (fully <a href="http://en.wikipedia.org/wiki/ACID">ACID</a>-compliant)</li>
+        <li>Highly Concurrent</li>
+        <li>Schema-less</li>
+        <li>Embedded</li>
+    </ul>
+    <p>
+        Xodus uses <a href="http://en.wikipedia.org/wiki/Log-structured_file_system">Log-Structured</a> data storage.
+        Reads are completely non-blocking due to <a
+            href="http://en.wikipedia.org/wiki/Multiversion_concurrency_control">MVCC</a> and true <a
+            href="http://en.wikipedia.org/wiki/Snapshot_isolation">Snapshot isolation</a>.
+    </p>
 
-            <h2 id="benchmarks">Performance</h2>
-            <p>
-                Here is <a href="https://github.com/JetBrains/xodus/wiki/Benchmarks">performance comparison</a> of
-                Xodus,
-                <a href="http://www.oracle.com/us/products/database/berkeley-db/je/overview/index.html">Berkeley DB
-                    JE</a>,
-                <a href="https://github.com/jankotek/MapDB">MapDb</a>,
-                <a href="https://github.com/OpenHFT/Chronicle-Map">Chronicle Map</a> and
-                <a href="http://www.h2database.com/html/mvstore.html">H2 MVStore</a>
-                using <a href="http://fallabs.com/tokyocabinet/benchmark.pdf">Tokyo Cabinet Benchmark</a> with 1000000
-                keys.
-            </p>
-            <div id="performancechart" class="performancechart"></div>
+    <h2 id="benchmarks">Performance</h2>
+    <p>
+        Here is <a href="https://github.com/JetBrains/xodus/wiki/Benchmarks">performance comparison</a> of
+        Xodus,
+        <a href="http://www.oracle.com/us/products/database/berkeley-db/je/overview/index.html">Berkeley DB
+            JE</a>,
+        <a href="https://github.com/jankotek/MapDB">MapDb</a>,
+        <a href="https://github.com/OpenHFT/Chronicle-Map">Chronicle Map</a> and
+        <a href="http://www.h2database.com/html/mvstore.html">H2 MVStore</a>
+        using <a href="http://fallabs.com/tokyocabinet/benchmark.pdf">Tokyo Cabinet Benchmark</a> with 1000000
+        keys.
+    </p>
+    <div id="performancechart" class="performancechart"></div>
 
-            <h2 id="learn">Find out more</h2>
-            <ul>
-                <li><a href="https://github.com/JetBrains/xodus/wiki">Xodus wiki</a></li>
-                <li><a href="http://xodus.myjetbrains.com/youtrack">Report an issue</a></li>
-                <li><a href="https://teamcity.jetbrains.com/viewType.html?buildTypeId=Xodus_Build">Check out the latest
-                    builds</a></li>
-                <li><a href="https://upsource.jetbrains.com/Xodus/view">Observe development in Upsource</a></li>
-                <li><a href="https://github.com/lehvolk/xodus-entity-browser">EntityStore browser</a></li>
-                <li><a href="mailto:xodus-feedback@jetbrains.com">Ask questions by e-mail</a></li>
-            </ul>
+    <h2 id="learn">Find out more</h2>
+    <ul>
+        <li><a href="https://github.com/JetBrains/xodus/wiki">Xodus wiki</a></li>
+        <li><a href="http://xodus.myjetbrains.com/youtrack">Report an issue</a></li>
+        <li><a href="https://teamcity.jetbrains.com/viewType.html?buildTypeId=Xodus_Build">Check out the latest
+            builds</a></li>
+        <li><a href="https://upsource.jetbrains.com/Xodus/view">Observe development in Upsource</a></li>
+        <li><a href="https://github.com/lehvolk/xodus-entity-browser">EntityStore browser</a></li>
+        <li><a href="mailto:xodus-feedback@jetbrains.com">Ask questions by e-mail</a></li>
+    </ul>
 
-            <div class="footer">
-                <p>&copy; JetBrains 2016</p>
-            </div>
-        </div>
+    <div class="footer">
+        <p>&copy; JetBrains 2017</p>
+    </div>
+</div>
 
-        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushJava.min.js"></script>
 
-        <script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
 
-        <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-50379992-2', 'jetbrains.github.io');
-            ga('send', 'pageview');
-        </script>
+    ga('create', 'UA-50379992-2', 'jetbrains.github.io');
+    ga('send', 'pageview');
+</script>
 
-    </body>
+</body>
 </html>
